<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="menu_help">Help</string>
  <string name="menu_home">Home</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_search_in_text">Find in page</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="menu_random_page">Random page</string>
  <string name="menu_read_aloud">Read aloud</string>
  <string name="menu_read_aloud_stop">Stop reading aloud</string>
  <string name="menu_support_kiwix">Support Kiwix</string>
  <string name="menu_support_kiwix_for_custom_apps">Support %s</string>
  <string name="menu_about_app">About %s app</string>
...
  <string name="shortcut_disabled_message">Shortcut not available</string>
  <string name="new_tab_shortcut_label">New tab</string>
  <string name="get_content_shortcut_label" tools:keep="@string/get_content_shortcut_label">Get content</string>
  <string name="fav_icon">Favicon</string>
  <string name="articleCount" tools:keep="@string/articleCount">%s articles</string>
  <string name="mediaCount" tools:keep="@string/mediaCount">%s medias</string>
  <string name="get_started" tools:keep="@string/get_started">Get started</string>
  <string name="download_books">Download books</string>
  <string name="humankind_knowledge" tools:keep="@string/humankind_knowledge">Humankind\’s knowledge, on your phone.</string>
  <string name="welcome_to_the_family" tools:keep="@string/welcome_to_the_family">Welcome to the family</string>
  <string name="save_books_offline" tools:keep="@string/save_books_offline">Save books offline</string>
  <string name="download_books_message" tools:keep="@string/download_books_message">Download books and read wherever you are.</string>
  <string name="save_books_in_desired_storage">Save books in desired storage</string>
  <string name="storage_location_hint">You can choose your preferred storage location, either SD card or internal storage, for downloading ZIM files from the Settings screen.</string>
  <string name="unable_to_add_to_bookmarks">Unable to add to bookmarks</string>
  <string name="go_to_previous_page">Go to previous page</string>
  <string name="go_to_next_page">Go to next page</string>
  <string name="table_of_contents">Table of contents</string>
  <string name="select_language" tools:keep="@string/select_language">Select language</string>
  <string name="save_languages" tools:keep="@string/save_languages">Save languages</string>
  <string name="all_languages" tools:keep="@string/all_languages">All languages</string>
  <string name="no_language_available" tools:keep="@string/no_language_available">No languages available</string>
  <string name="expand">Expand</string>
  <string name="history">History</string>
...
