...
  android:layout_height="match_parent"
  android:fitsSystemWindows="false"
  android:orientation="vertical">


  <android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.internal.ScrimInsetsFrameLayout
      android:id="@+id/content_frame"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      android:orientation="vertical" />

    <RelativeLayout
...
    <include layout="@layout/drawer_right" />

  </android.support.v4.widget.DrawerLayout>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="?colorPrimaryDark"
      app:popupTheme="@style/AppTheme.PopupOverlay"
      app:theme="@style/AppTheme.AppBarOverlay" />

...
